--- a/HTM-CSS-COURSE/intro-to-html/Lesson9/9e.css
+++ b/HTM-CSS-COURSE/intro-to-html/Lesson9/9e.css
@@ -1,3 +1,10 @@
+.new-tweet {
+  border-radius: 2px;
+  width: 290px;
+  padding: 10px;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
+}
+
 .profile-picture {
   width: 30px;
   height: 30px;
