--- a/HTM-CSS-COURSE/styles/header.css
+++ b/HTM-CSS-COURSE/styles/header.css
@@ -1,9 +1,18 @@
 .header {
   height: 55px;
 
+  background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: rgb(228, 228, 228);
 }
 
 .left-section {
