--- a/HTM-CSS-COURSE/styles/general.css
+++ b/HTM-CSS-COURSE/styles/general.css
@@ -6,7 +6,15 @@ p {
 
 body {
   margin: 0;
-  padding-top: 80px;
+  padding-top: 120px;
   height: 1000px;
   padding-left: 80px;
+  background-color: rgb(249, 249, 249);
+}
+
+@media (max-width: 700px) {
+  body {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
