--- a/HTM-CSS-COURSE/styles/header.css
+++ b/HTM-CSS-COURSE/styles/header.css
@@ -9,6 +9,7 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 300;
 
   border-bottom-width: 1px;
   border-bottom-style: solid;
@@ -49,15 +50,56 @@
   border-color: rgb(192, 192, 192);
   margin-left: -1px;
   margin-right: 10px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 20px;
+  border-top-right-radius: 20px;
+  border-left: none;
+}
 
+.search-button,
+.voice-search-button,
+.upload-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+  cursor: pointer;
+}
+
+.search-button .tooltip,
+.voice-search-button .tooltip,
+ .upload-icon-container .tooltip {
+  font-family: Roboto, Arial;
+  position: absolute;
+  background-color: gray;
+  color: white;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
+
+  border-radius: 2px;
+  font-size: 12px;
+  bottom: -30px;
+  opacity: 0;
+  transition: opacity 0.15s;
+  pointer-events: none;
+  white-space: nowrap;
+}
+
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+ .upload-icon-container:hover .tooltip {
+  opacity: 1;
 }
 
 .search-icon {
   height: 25px;
-  margin-top: 4px;
 }
- 
-.voice-search-button {  
+
+.voice-search-button {
   height: 40px;
   width: 40px;
   border-radius: 20px;
@@ -67,7 +109,6 @@
 
 .voice-search-icon {
   height: 24px;
-  margin-top: 4px;
 }
 
 .search-bar {
@@ -77,10 +118,14 @@
   padding-left: 13px;
   font-size: 16px;
   border-width: 1px;
-  border-style: solid; 
+  border-style: solid;
   border-color: rgb(192, 192, 192);
-  border-radius: 2px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 20px;
+  border-top-left-radius: 20px;
   box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+  border-right: none;
 }
 
 .search-bar::placeholder {
@@ -108,6 +153,25 @@
 
 .notifications-icon {
   height: 24px;
+}
+
+.notifications-icon-container {
+  position: relative;
+}
+
+.notifications-count {
+  position: absolute;
+  top: -3px;
+  right: -5px;
+  background-color: red;
+  color: white;
+  font-family: Roboto, Arial;
+  font-size: 11px;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-bottom: 2px;
+  padding-top: 2px;
+  border-radius: 10px;
 }
 
 .current-user-picture {
