--- a/HTM-CSS-COURSE/styles/header.css
+++ b/HTM-CSS-COURSE/styles/header.css
@@ -25,10 +25,12 @@
   height: 24px;
   margin-left: 24px;
   margin-right: 24px;
+  cursor: pointer;
 }
 
 .youtube-logo {
   height: 20px;
+  cursor: pointer;
 }
 
 .middle-section {
@@ -59,7 +61,9 @@
 
 .search-button,
 .voice-search-button,
-.upload-icon-container {
+.upload-icon-container,
+.youtube-apps-icon-container,
+.notifications-icon-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -70,7 +74,9 @@
 
 .search-button .tooltip,
 .voice-search-button .tooltip,
- .upload-icon-container .tooltip {
+ .upload-icon-container .tooltip,
+ .youtube-apps-icon-container .tooltip,
+ .notifications-icon-container .tooltip {
   font-family: Roboto, Arial;
   position: absolute;
   background-color: gray;
@@ -91,7 +97,9 @@
 
 .search-button:hover .tooltip,
 .voice-search-button:hover .tooltip,
- .upload-icon-container:hover .tooltip {
+ .upload-icon-container:hover .tooltip,
+ .youtube-apps-icon-container:hover .tooltip,
+ .notifications-icon-container:hover .tooltip {
   opacity: 1;
 }
 
@@ -177,4 +185,5 @@
 .current-user-picture {
   height: 32px;
   border-radius: 16px;
+  cursor: pointer;
 }
