--- a/ISRO-Redesign/styles/header.css
+++ b/ISRO-Redesign/styles/header.css
@@ -5,49 +5,28 @@
   left: 0;
   right: 0;
   color: white;
-  background-color: transparent;
+  background-color: rgb(0, 8, 33);
 
   padding-left: 20px;
   padding-right: 20px;
 
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  align-items: center;
-  height: 100px;
-}
-
-.left-section {
-  display: flex;
+  height: 30px;
   column-gap: 20px;
-}
-
-.isro-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  row-gap: 10px;
 }
 
 .isro {
   font-family: Orbitron, sans-serif;
-  font-size: 35px;
+  font-size: 16px;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
-  font-weight: 600;
+  font-weight: 300;
 }
 
 .sub-isro {
   font-family: Orbitron, sans-serif;
-  font-size: 18px;
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: 200;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
-}
-
-.isro-logo {
-  height: 80px;
-  cursor: pointer;
-}
-
-.Emblem-of-India-logo {
-  width: 50px;
 }
