--- a/ISRO-Redesign/styles/subheader.css
+++ b/ISRO-Redesign/styles/subheader.css
@@ -66,7 +66,7 @@
 }
 
 .search-icon {
-  width: 20px;
+  width: 18px;
   object-fit: contain;
   object-position: center;
 }
@@ -152,6 +152,7 @@
   display: block;
   min-width: 230px;
 
+  text-decoration: none;
   color: rgb(218, 223, 238);
   font-family: Arial;
   font-size: 15px;
